2006-03-07  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* ===  Released 2.10.1 ===

	* NEWS: Updates.

	* glib/gutf8.c (_g_charset_get_aliases): Match the prototype
	in gconvert.c to fix build problems in NetBSD.  (#333651,
	Julio M. Merino Vidal)

2006-03-06  Anders Carlsson  <andersca@imendio.com>

	* configure.in:
	Make .dylib the shared library suffix on darwin.
	(#322476, Vladimir Panov)
	
2006-03-06  Anders Carlsson  <andersca@imendio.com>

	* configure.in:
	Skip checking thread flags on Darwin. Fix suggested by Manish Singh.
	(#314794, Gregor Riepl)
	
2006-03-01  Tor Lillqvist  <tml@novell.com>

	* glib/gutils.c (g_listenv): Separate implementation on Win32: Use
	the wide character API on NT-based Windows. Return UTF-8 strings.

	* glib/glib.symbols: Don't mark g_listenv as PRIVATE, as that
	meant it wasn't present in the import library. PRIVATE is used
	only for the backwards-compatibility DLL ABI stability hacks.

2006-02-24  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.10.0 ===

	* README.in: Mention the slice allocator and GInitiallyUnowned.

	* NEWS: Updates

	* configure.in: Bump version to 2.10.0

	* tests/utf8-pointer.c: Add tests for g_utf8_strlen().

	* glib/gutf8.c: Fix boundary cases in g_utf8_strlen().
	(#332435)

2006-02-23  Kjartan Maraas  <kmaraas@gnome.org>

	* tests/completion-test.c: (main): Plug leaks reported by
	valgrind.
	* tests/convert-test.c: (test_iconv_state), (test_one_half):
	Same.
	* tests/patterntest.c: (test_compilation): Same
	* tests/shell-test.c: (do_argv_test): Same.
	* tests/unicode-caseconv.c: (main): Same.
	* tests/uri-test.c: (run_to_uri_tests): Same.
	Closes bug #332093.

2006-02-19  Martyn Russell  <martyn@imendio.com>
	
	* tests/asyncqueue-test.c: 
	* tests/list-test.c: 
	* tests/slist-test.c: Updated to test _sort, _sort_with_data,
	_insert_sorted and _insert_sorted_with_data API. 

2006-02-18  Matthias Clasen  <mclasen@redhat.com>
