@@ -1,3 +1,7 @@
+2006-03-08  Tor Lillqvist  <tml@novell.com>
+
+	* glibconfig.h.win32.in: Add G_GUINT64_CONSTANT.
+
 2006-03-07  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
